updates to tutorials

--- a/Probability/DiscreteProbabilityDistributions.ipynb
+++ b/Probability/DiscreteProbabilityDistributions.ipynb
@@ -254,7 +254,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **1.3. Poisson Distribution**\n",
+    "### **1.3 Multinomial Distribution:**  \n",
+    "The **Multinomial Distribution** is a generalization of the **Binomial Distribution**. It models the probabilities of multiple possible outcomes in a fixed number of independent trials.  \n",
+    "\n",
+    "The probability mass function (PMF) of the multinomial distribution is:  \n",
+    "\n",
+    "$$\n",
+    "P(X_1 = x_1, X_2 = x_2, ..., X_k = x_k) = \\frac{n!}{x_1! x_2! ... x_k!} p_1^{x_1} p_2^{x_2} ... p_k^{x_k}\n",
+    "$$\n",
+    "\n",
+    "where:  \n",
+    "- $ n $ = Total number of trials  \n",
+    "- $ k $ = Number of possible categories (classes)  \n",
+    "- $ x_i $ = Number of times category $ i $ occurs (such that $ x_1 + x_2 + ... + x_k = n $)  \n",
+    "- $ p_i $ = Probability of category $ i $ (such that $ p_1 + p_2 + ... + p_k = 1 $)  \n",
+    "- The factorial term accounts for different ways outcomes can be arranged.  \n",
+    "\n",
+    "#### **How Multinomial Distribution Differs from Binomial Distribution**\n",
+    "| Feature | **Multinomial Distribution** | **Binomial Distribution** |\n",
+    "|---------|-----------------------------|---------------------------|\n",
+    "| **Number of Outcomes** | More than 2 categories ($ k > 2 $) | Only 2 categories (success/failure) |\n",
+    "| **Number of Trials** | $ n $ trials, each can result in one of $ k $ outcomes | $ n $ trials, each is success (1) or failure (0) |\n",
+    "| **Probability Parameters** | $ p_1, p_2, ..., p_k $ (sum to 1) | $ p $ (probability of success), $ 1 - p $ (failure) |\n",
+    "| **Example** | Predicting the next word in NLP (multiple words possible) | Tossing a coin (heads/tails) |\n",
+    "\n",
+    "📌 **Think of Multinomial as an extension of Binomial to more than two possible outcomes.**  \n",
+    "\n",
+    "#### **Practical applications of the Multinomial Distribution include:**\n",
+    "\n",
+    "#### **1. Multinomial Naïve Bayes (Text Classification)**\n",
+    "🔹 **Use Case:** Classifying emails into **spam**, **promotions**, or **social** categories.  \n",
+    "🔹 **How it works:**  \n",
+    "   - Each email or document contains **multiple words**. C is the class of the document, W is the feature matrix of words in the document, and $w_i$ is the individual word feature representing the count of that word in one hot encoded format. There are a total of k words in the vocabulary and each word in the document is a word in vocabulary. The words in a document thus follow a multinomial distribution defined as\n",
+    "$$\n",
+    "P(W | C) = \\frac{(N!) \\prod_{i=1}^{n} P(w_i | C)^{w_i}}{w_1! w_2! ... w_n!}\n",
+    "$$\n",
+    "Probability of words in a document $ P(W) = P(W | C) P(C) + P(W | \\neg C) P(\\neg C) $\n",
+    "   - The probability of an email belonging to class $ C $ using naive bayes is:\n",
+    "     $$\n",
+    "     P(C | W) = \\frac{P(W | C) P(C)}{P(W)} = \\prod_{i=1}^{n} P(w_i | C) \\frac{P(C)}{P(W)}\n",
+    "     $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **1.4. Poisson Distribution**\n",
     "The **Poisson distribution** models the probability of a **fixed number of events occurring in a fixed interval** (time, space, etc.) **when these events happen randomly and independently** at a known average rate $ \\lambda $ (lambda).  \n",
     "\n",
     "The **Poisson probability mass function (PMF)** is:  \n",
