--- a/Probability/ContinuousProbabilityDistributions.ipynb
+++ b/Probability/ContinuousProbabilityDistributions.ipynb
@@ -263,8 +263,8 @@
    "metadata": {},
    "source": [
     "#### **4. Gaussian Naïve Bayes for Classification**\n",
-    "🔹 **Use Case:** **Gaussian Naïve Bayes (GNB)** assumes features are normally distributed:  \n",
-    "   - Used in **text classification, spam detection, and medical diagnosis**.  \n",
+    "🔹 **Use Case:** **Gaussian Naïve Bayes (GNB)** assumes continuous features are normally distributed:  \n",
+    "   - Used in **text classification, spam detection, and medical diagnosis**. For e.g. classifying whether a patient has a disease based on continuous features like **blood pressure, sugar level, heart rate** \n",
     "   - Probability of a feature $ x_i $ given class $ C $ is modeled as:\n",
     "     $$\n",
     "     P(x_i | C) = \\frac{1}{\\sqrt{2\\pi\\sigma^2}} e^{-\\frac{(x_i - \\mu)^2}{2\\sigma^2}}\n",
