--- a/DeepLearning/BERT.ipynb
+++ b/DeepLearning/BERT.ipynb
@@ -131,8 +131,8 @@
     "BERT can be fine-tuned for different tasks by adding **task-specific layers**:\n",
     "\n",
     "- **Sentiment Analysis**: Add a classification layer to the **[CLS]** token output.\n",
-    "- **Question Answering (SQuAD)**: Learn two vectors marking the **start and end** of an answer in a text.\n",
-    "- **Named Entity Recognition (NER)**: Classify each token to identify entities (e.g., names, organizations, dates).\n",
+    "- **Question Answering (SQuAD)**: Learn two vectors marking the **start and end** of an answer in a text. Using BERT, a Q&A model can be trained by learning two extra vectors that mark the beginning and the end of the answer.\n",
+    "- **Named Entity Recognition (NER)**: Classify each token to identify entities (e.g., names, organizations, dates). Using BERT, a NER model can be trained by feeding the output vector of each token into a classification layer that predicts the NER label.\n",
     "\n",
     "### Recommended Hyperparameters for Fine-Tuning:\n",
     "| Hyperparameter     | Recommended Values |\n",
