Added details about MLM to BERT documentation

--- a/DeepLearning/BERT.ipynb
+++ b/DeepLearning/BERT.ipynb
@@ -149,6 +149,127 @@
     "BERT’s bidirectional Transformer architecture enables **deep contextual understanding**, making it one of the most powerful NLP models. By pre-training on **masked language modeling** and **next sentence prediction**, then fine-tuning on downstream tasks, BERT achieves remarkable performance on a wide range of language applications.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "Masked Language Modeling (MLM), used in BERT, is a **self-supervised learning task** where some words in a sentence are randomly masked, and the model learns to predict them based on context.\n",
+    "\n",
+    "### **Step-by-Step Breakdown of MLM Prediction**\n",
+    "#### **1. Tokenization and Input Embeddings**\n",
+    "- First, the input text is **tokenized** into subword units.\n",
+    "- The tokens are then converted into **embedding vectors** using a pre-trained embedding matrix.\n",
+    "\n",
+    "#### **2. Passing Through BERT Encoder**\n",
+    "- The token embeddings, along with positional and segment embeddings, are passed through the **BERT Transformer Encoder**.\n",
+    "- The **self-attention mechanism** allows every token to be contextualized based on all other tokens in the sequence.\n",
+    "\n",
+    "#### **3. Prediction of Masked Tokens**\n",
+    "- The final contextualized embeddings are then **multiplied by the embedding matrix** (which is also the vocabulary lookup table).\n",
+    "- This multiplication projects the contextual representations into the **vocabulary dimension**, producing a score for each token in the vocabulary.\n",
+    "- A **softmax function** is applied to these scores to obtain a probability distribution over all possible words.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Code Explanation with Detailed Matrix Dimensions**\n",
+    "Below is an **annotated PyTorch implementation** that demonstrates MLM prediction in a simplified manner.\n",
+    "\n",
+    "```python\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "from transformers import BertTokenizer, BertModel\n",
+    "\n",
+    "# Load Pretrained Tokenizer and Model\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "bert_model = BertModel.from_pretrained(\"bert-base-uncased\")\n",
+    "\n",
+    "# Sample Input Text\n",
+    "text = \"The cat sat on the [MASK].\"\n",
+    "\n",
+    "# Step 1: Tokenization\n",
+    "tokens = tokenizer(text, return_tensors=\"pt\")  # Convert text to token IDs\n",
+    "input_ids = tokens[\"input_ids\"]  # Shape: (1, sequence_length)\n",
+    "\n",
+    "# Step 2: Pass Through BERT Encoder\n",
+    "# In BERT, the outputs object contains several attributes, including last_hidden_state and pooler_output. \n",
+    "# Here's the difference between them:\n",
+    "# last_hidden_state:\n",
+    "# This is the output of the last layer of the BERT encoder.\n",
+    "# It has the shape (batch_size, sequence_length, hidden_size).\n",
+    "# It contains the hidden states for each token in the input sequence.\n",
+    "# This is useful when you need token-level representations, such as for tasks like Named Entity Recognition (NER) or Question Answering.\n",
+    "# pooler_output:\n",
+    "# This is the output of a pooling layer applied to the hidden state of the [CLS] token (the first token in the sequence).\n",
+    "# It has the shape (batch_size, hidden_size).\n",
+    "# It is typically used for classification tasks where you need a single vector representation of the entire sequence.\n",
+    "# The pooling layer usually consists of a dense layer followed by a Tanh activation function.\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    outputs = bert_model(input_ids)  # BERT Encoder output\n",
+    "    hidden_states = outputs.last_hidden_state  # Shape: (1, seq_len, hidden_dim)\n",
+    "\n",
+    "# Step 3: Selecting the Hidden State of [MASK] Token\n",
+    "mask_token_index = torch.where(input_ids == tokenizer.mask_token_id)[1]  # Find [MASK] index\n",
+    "mask_hidden_state = hidden_states[0, mask_token_index, :]  # Shape: (1, hidden_dim)\n",
+    "\n",
+    "# Step 4: Multiply by the Embedding Matrix (Tie Weights)\n",
+    "# BERT uses tied weights, meaning its embedding matrix is reused here\n",
+    "embedding_matrix = bert_model.embeddings.word_embeddings.weight  # Shape: (vocab_size, hidden_dim)\n",
+    "vocab_scores = torch.matmul(mask_hidden_state, embedding_matrix.T)  # Shape: (1, vocab_size)\n",
+    "\n",
+    "# Step 5: Apply Softmax to Get Probabilities\n",
+    "probs = F.softmax(vocab_scores, dim=-1)  # Shape: (1, vocab_size)\n",
+    "\n",
+    "# Step 6: Retrieve the Most Likely Token\n",
+    "predicted_token_id = torch.argmax(probs, dim=-1).item()\n",
+    "predicted_word = tokenizer.decode([predicted_token_id])  # Convert token ID back to word\n",
+    "\n",
+    "# Print the predicted word for [MASK]\n",
+    "print(\"Predicted word:\", predicted_word)\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Explanation of Matrix Operations**\n",
+    "| **Step** | **Operation** | **Matrix Shape** |\n",
+    "|----------|--------------|------------------|\n",
+    "| **1. Tokenization** | Convert input text into token IDs | `(1, seq_len)` |\n",
+    "| **2. BERT Encoder** | Generate hidden representations | `(1, seq_len, hidden_dim)` |\n",
+    "| **3. Extract [MASK] Token's Hidden State** | Select contextualized vector for `[MASK]` | `(1, hidden_dim)` |\n",
+    "| **4. Multiply by Embedding Matrix** | Project to vocabulary space | `(1, vocab_size)` |\n",
+    "| **5. Softmax** | Convert logits into probabilities | `(1, vocab_size)` |\n",
+    "| **6. Argmax** | Select the highest probability word | `scalar` (token ID) |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **How Does Multiplying by the Embedding Matrix Work?**\n",
+    "Multiplication by the embedding matrix transforms the **hidden state representation** of `[MASK]` into a vector of vocabulary size. Mathematically:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{y} = \\mathbf{h} \\cdot \\mathbf{W}^T\n",
+    "$$\n",
+    "\n",
+    "- $ \\mathbf{h} $ → Hidden state of `[MASK]` (Shape: **$ (1, hidden\\_dim) $**)\n",
+    "- $ \\mathbf{W} $ → Word embedding matrix (Shape: **$ (vocab\\_size, hidden\\_dim) $**)\n",
+    "- $ \\mathbf{W}^T $ → Transposed embedding matrix (Shape: **$ (hidden\\_dim, vocab\\_size) $**)\n",
+    "- $ \\mathbf{y} $ → Output logits (Shape: **$ (1, vocab\\_size) $**)\n",
+    "\n",
+    "Each **logit** in the final vector represents how well the masked position aligns with each vocabulary word.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Key Takeaways**\n",
+    "1. **BERT learns contextual representations**, so the `[MASK]` token’s prediction is based on surrounding words.\n",
+    "2. **Multiplication by the embedding matrix** converts the hidden representation into a vocabulary-sized space.\n",
+    "3. **Softmax converts logits into probabilities**, allowing the model to pick the most likely word.\n",
+    "4. **Tied weights**: The same embedding matrix used in the input stage is used for output projection.\n",
+    "\n",
+    "This is how **Masked Language Modeling (MLM) enables BERT to learn bidirectional representations** of language! 🚀"
+   ]
   }
  ],
  "metadata": {
